fix bold font and secondary color not showing

--- a/packages/frontend/src/fonts/stylesheet.css
+++ b/packages/frontend/src/fonts/stylesheet.css
@@ -19,7 +19,7 @@
         url('GraphikArabic-Bold.woff2') format('woff2'),
         url('GraphikArabic-Bold.woff') format('woff'),
         url('GraphikArabic-Bold.ttf') format('truetype');
-    font-weight: bold;
+    font-weight: 700;
     font-style: normal;
     font-display: swap;
 }
@@ -71,7 +71,7 @@
         url('GraphikArabic-Regular.woff2') format('woff2'),
         url('GraphikArabic-Regular.woff') format('woff'),
         url('GraphikArabic-Regular.ttf') format('truetype');
-    font-weight: normal;
+    font-weight: 400;
     font-style: normal;
     font-display: swap;
 }
@@ -97,7 +97,7 @@
         url('GraphikArabic-Super.woff2') format('woff2'),
         url('GraphikArabic-Super.woff') format('woff'),
         url('GraphikArabic-Super.ttf') format('truetype');
-    font-weight: normal;
+    font-weight: 800;
     font-style: normal;
     font-display: swap;
 }
